# GLCraft

./: .gitignore  CMakeLists.txt  Chunk.cpp  Chunk.h  glad.c  main.cpp
glad/: glad.h
src/: Application.cpp  Application.h  BlockData.cpp  BlockData.h  Camera.h  Chunk.cpp  Chunk.h  Scene.cpp  Scene.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
src/Application/: Application.cpp  Application.h  Window.cpp  Window.h
src/Rendering/: Camera.h  TextureLoader.cpp  TextureLoader.h  shader_s.h
src/Rendering/Shaders/: Block.frag  Block.vert
src/Rendering/Textures/: AtlasInfos.json  BlockData.json  myAtlas.xcf
src/Scene/: BlockData.cpp  BlockData.h  Chunk.cpp  Chunk.h  ChunkContainer.cpp  ChunkContainer.h  Scene.cpp  Scene.h  World.cpp  World.h
third_parties/glad/: glad.c
